--- a/JWTAuth/JWTAuth/JWTAuth.csproj
+++ b/JWTAuth/JWTAuth/JWTAuth.csproj
@@ -136,7 +136,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\ChecklistController.cs" />
+    <Compile Include="Controllers\api\ChecklistController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
