--- a/JWTAuth/JWTAuth/JWTAuth.csproj
+++ b/JWTAuth/JWTAuth/JWTAuth.csproj
@@ -136,6 +136,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\api\AcountController.cs" />
     <Compile Include="Controllers\api\ChecklistController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -143,9 +144,13 @@
     </Compile>
     <Compile Include="Models\Checklist.cs" />
     <Compile Include="Models\ChecklistItem.cs" />
+    <Compile Include="Models\TokenManager.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\ChecklistRepository.cs" />
     <Compile Include="Repository\IChecklistRepository.cs" />
+    <Compile Include="Repository\IUserRepository.cs" />
+    <Compile Include="Repository\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
