--- a/JWTAuth/JWTAuth/bin/JWTAuth.dll.config
+++ b/JWTAuth/JWTAuth/bin/JWTAuth.dll.config
@@ -12,6 +12,11 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <add key="config:JwtKey" value="this is my custom Secret key for authentication"/>
+    <add key="config:JwtExpireDays" value="30"/>
+    <add key="config:JwtIssuer" value="https://localhost:44340/"/>
+    <add key="config:JwtAudience" value="SecureApiUser"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
